# ChangeLog for dev-ruby/rspec-expectations
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.73 2014/07/22 15:58:44 klausman Exp $

  22 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
  rspec-expectations-2.99.0.ebuild:
  Keyworded on alpha, bug #465948

  21 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
  rspec-expectations-2.14.5.ebuild:
  Stable on alpha, bug #505920

  14 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  rspec-expectations-2.14.5.ebuild:
  x86 stable wrt bug #505920

*rspec-expectations-2.99.1 (08 Jul 2014)

  08 Jul 2014; Hans de Graaff <graaff@gentoo.org>
  +rspec-expectations-2.99.1.ebuild:
  Version bump.

  16 Jun 2014; Tobias Klausmann <klausman@gentoo.org>
  rspec-expectations-2.14.5-r1.ebuild:
  Keyworded on alpha, bug #465948

  13 Jun 2014; Jeroen Roovers <jer@gentoo.org>
  rspec-expectations-2.14.5.ebuild:
  Stable for HPPA (bug #505920).

*rspec-expectations-2.99.0 (09 Jun 2014)

  09 Jun 2014; Hans de Graaff <graaff@gentoo.org>
  +rspec-expectations-2.99.0.ebuild:
  Version bump for rspec 2.99.

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org>
  rspec-expectations-2.14.5.ebuild:
  ia64 stable wrt bug #505920

  01 Jun 2014; Markus Meier <maekke@gentoo.org>
  rspec-expectations-2.14.5.ebuild:
  arm stable, bug #505920

  27 Apr 2014; Jeroen Roovers <jer@gentoo.org>
  rspec-expectations-2.14.5.ebuild:
  Marked ~hppa (bug #508828).

  26 Apr 2014; Jeroen Roovers <jer@gentoo.org>
  rspec-expectations-2.14.5.ebuild:
  Stable for HPPA (bug #508416).

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> rspec-expectations-2.12.1.ebuild,
  rspec-expectations-2.13.0.ebuild, rspec-expectations-2.14.5-r1.ebuild,
  rspec-expectations-2.14.5.ebuild:
  Remove ree18 and ruby18 target.

*rspec-expectations-2.14.5-r1 (01 Apr 2014)

  01 Apr 2014; Hans de Graaff <graaff@gentoo.org>
  +rspec-expectations-2.14.5-r1.ebuild: