@@ -1,14 +1,16 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-mocks/rspec-mocks-2.99.1.ebuild,v 1.2 2014/08/02 06:09:19 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-expectations/rspec-expectations-2.99.2.ebuild,v 1.2 2014/08/02 06:07:30 graaff Exp $
 
 EAPI=5
 USE_RUBY="ruby19 ruby20 ruby21 jruby"
 
 RUBY_FAKEGEM_RECIPE_TEST="rspec"
 
-RUBY_FAKEGEM_RECIPE_DOC="none"
+RUBY_FAKEGEM_TASK_DOC=""
 RUBY_FAKEGEM_EXTRADOC="Changelog.md README.md"
+
+RUBY_FAKEGEM_GEMSPEC="${PN}.gemspec"
 
 inherit ruby-fakegem
 
@@ -21,10 +23,11 @@ SLOT="2"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
 IUSE=""
 
-ruby_add_bdepend "
-	test? (
-		>=dev-ruby/rspec-core-2.10.0:2
-		>=dev-ruby/rspec-expectations-2.99.0:2
+ruby_add_rdepend ">=dev-ruby/diff-lcs-1.1.3"
+
+ruby_add_bdepend "test? (
+		>=dev-ruby/rspec-core-2.11.0:2
+		>=dev-ruby/rspec-mocks-2.14.0:2
 	)"
 
 all_ruby_prepare() {
@@ -38,6 +41,21 @@ all_ruby_prepare() {
 	# bootstrapping.
 	rm .rspec || die
 
+	# fix up the gemspecs
+	sed -i \
+		-e '/git ls/d' \
+		-e '/add_development_dependency/d' \
+		"${RUBY_FAKEGEM_GEMSPEC}" || die
+
 	# Avoid a weird, and failing, test testing already installed code.
-	sed -e '/has an up-to-date caller_filter file/,/end/ s:^:#:' -i spec/rspec/mocks_spec.rb || die
+	sed -e '/has an up-to-date caller_filter file/,/end/ s:^:#:' -i spec/rspec/expectations_spec.rb || die
+}
+
+each_ruby_prepare() {
+	case ${RUBY} in
+		*jruby)
+			# Avoid a test failing on backtrace details.
+			sed -e '/when the root file is loaded/,/end/ s:^:#:' -i spec/rspec/expectations_spec.rb || die
+			;;
+	esac
 }
