@@ -8,21 +8,21 @@ DIST rspec-mocks-2.13.1-git.tgz 74980 SHA256 8a0bdff13007a56ea615815170fbbfb0ad9
 DIST rspec-mocks-2.14.6-git.tgz 94286 SHA256 2453766688b33a5cd743f4ebc3ffccd4277e3daca069828c7206bd0f12d5fee4 SHA512 a079c0b860c7ca4b4da366fa131617ddcb636918cd0c065ef3d8d585938228f442bb58ab5fcd2cd84b590bf6ab468d637fa7ab0181864a59c131f0a890e46702 WHIRLPOOL d29599bf4465c38433d7ddf70a12c43a523c289fd9857aadeb41610aef4980d8ea43cd1aef48d3d1d736e67a201bba131ea151a0ecb297e887fac51baf35655b
 DIST rspec-mocks-2.99.0-git.tgz 101114 SHA256 69c0baf061d490daa8d366eb62da30e15bd8f7796ee0b9313e969e497d3e0405 SHA512 8881526abee680f01304f2454c99078620c3551308b47929b2faeb48f305b6fdbd36a0a1e5d41f567b160dc8b07fa67d6096d43d6d0b5d9515a7b74453b6a005 WHIRLPOOL 5c1cbde300ff82ae6a1870963f45daf959e11812fbca42b27a55e675aca38af9657a72746a425b68c63dca55490c1394303689b0e89caf930d81b281bba40e60
 DIST rspec-mocks-2.99.1-git.tgz 101315 SHA256 e75b0a2bd35ac9afae3bb00470ee748b7a9a216bdc28a7b2a4dd62df5f4e9e81 SHA512 a501f234374ff9b9c51c122c84ea3770fe7acc0381cca2d24434036ee6e6515d30725b9fab33d4fede2ce8691e9e824457b337a1fe0631e79948632a953f191b WHIRLPOOL 9ed0bb8d900591371b746eb4b6c98db9b035181dfe1e664fbf7e1b21fc09dad97c54996dbc7ff19c0156d31edf80672639ceb1bce47c41d7a528ea4ad0d181ed
+DIST rspec-mocks-2.99.2-git.tgz 101731 SHA256 fad961e30ef67e014625fb6b4bb62db0f6f101142a897b4cad31e60f8faf8c57 SHA512 dd3b9394d56de8d3089db7777cda1e1a5bbdc46486876a99a8a83b602b84ba0320913d8e8dabe5e0367645eb01b943607b93e67d87cc26e380c8db6e048e4e0d WHIRLPOOL 06e8c3dd38fa17fbd82c97fe1c19928450234c761185cf636556955df9a081f4685d002a8fe501690c5457c63014ce8a60c5aca32b7c4bc24eb368368e5e33c3
 EBUILD rspec-mocks-2.12.1.ebuild 1118 SHA256 0383d17269a6f282c752fcbad6b4186e11a35ae2fac6aa1cc964607a0a606ca1 SHA512 386c955e4fb104744180591ab6dd66ce391216f313f68a03dab1af90eb66006c6bbcbe45f6f7561ea0d48778078a690df25921caf12febb9eca28d4ad5366e2b WHIRLPOOL 7662757365925c015d6dd4e788c2272e3d2a2dbe0627206b81b25467713a3253d42852518949b50df75c076cf30905777ad7bf12d06f7f7000302f4429429c3d
 EBUILD rspec-mocks-2.12.2.ebuild 1126 SHA256 f739fd5f3b19b482e52e6bb0a89834169811a85f2e3dfcadbedc4eda0a9c26b7 SHA512 45c943737a53a82d0c97f8d0c0aba9bfce6f499bdef7d5ae75260dc72f59539eb1ce145cee3d9c2505c4563ec9a0d501fa1825c451e4aff3d97e4ea4ed53e57d WHIRLPOOL 7f37172700fcfef2c486586902fcc50a78b313caeef9f92df9418839b1d1769b9568677a532747032ab586dd0608fbc594cec744e3e7ecfc9b5f8fbce13a63c3
 EBUILD rspec-mocks-2.13.1.ebuild 1110 SHA256 1464a918bf91fb6904ea6d024ba52f1051c4041442c98fe796bdc17307c89d0f SHA512 ebce06a925f9f62c7f3f3fd50d08e61cd19efa39b6e8158499f611b1e8d8d8b5e6023a4421c575aaa165961fc4a761741f0e2be4ae70c51d14654f1b58a3f9ee WHIRLPOOL 13e6b9fc3fe20bdda558e3e5e4a438816bed5bec119ab9a70cd3ec7518d4943f608cdc75895b1f389e64e496326beec54c4547720071c3fc1e546b75fd418d96
 EBUILD rspec-mocks-2.14.6-r1.ebuild 1225 SHA256 2f2f7f697fb20b12856962949ce9becfdc9792a7d6c1a787c27052c7bfee71e6 SHA512 de172bd51e0bd110da27c617c6aecf95c2e74f63e55afb572d136bba636fe4464948d406b40f3d0ef3b991a85e9418f16061fe7cafb29b8f032c1fab311c86f3 WHIRLPOOL f4cd53d9a83dca019ab777a355c87bace03ba44b1b720bfe058ebcc08a76667d1d501d78c85133b194b3d3f494ea5af4c2f4d735cbf1531dd9c8bb1a12e1a974
 EBUILD rspec-mocks-2.14.6.ebuild 1217 SHA256 efadf0fa22e4a7f09cf64a82ed620164c7b0b69646a570dada5865253fb57f2c SHA512 6f157f364797a8bdc7ede083ae3cc6637896946f776aa8a4d585b57da087abd4dd5fadb10a6737c2cb20cf7b531a9f5c85ed40116c7b2074bdc74502c5d89bf0 WHIRLPOOL 19af92aa303bffe15dab5b1d2dd59207f0a462488fc5d996ea6652612c32008880acf53fa184254f063e1fb80dc42a2f25b089f14e52c9b219371c29051bd2ba
 EBUILD rspec-mocks-2.99.0.ebuild 1397 SHA256 ea7b772e15912e38538ce467a676c766343f0dca44d21eff1e4d55b797c13905 SHA512 8a60136e45ee5a5add7a9335532fac564a4710ead0d63c3b5eee9103a7c9e463a7b3487d0f45edd8697c2d075a0dcd45c3e1beaf1bd99d136b809ed873960ac8 WHIRLPOOL 245c81a1f85f220e07e3839176b282de9d0350f82fb09b1d0a2e4c8eec1174bfb264af94ae6aa06df5a5af2bd99a97f983f71edc910c6cd9e9e8762bff2feb89
-EBUILD rspec-mocks-2.99.1.ebuild 1388 SHA256 9cdff89ecf5129e9eb6ce767651bf15c0a1e8dfb3776a8317bc8ac1f877412f9 SHA512 c15b27a0891025c9045c1621374e565b930ec49e07b8eeba7ec1fd6bcf3150a199f7f0a1e193ec5988f877e0cd0982c5c0ae2681cadbc7fa681e3beef75ea153 WHIRLPOOL ca4baae9922817c72cefdd575d0cbbb9df30e723347e35986ffbc00693baa217cb6ed3db2e91e19b6587006ada6a864f6940be8bbcd90cd3f778ac98f9fce4fa
-MISC ChangeLog 10155 SHA256 bbe9f29ed0cdf44c0013985be7c3cfdcc9c769a7534556815e73701e57d0687e SHA512 18ca7d6425e275d6c07e36f78081ea620a0952776a5cbe05878ae0d61ce26419d4ce4d85ce67fa2fffdff1aba0b52eb188a08cafacecd7c75c7692cc01698a56 WHIRLPOOL d26650884080777adb9baed656bd43ab58ff8216620a6301c6e08b4df7cd8a855b59fa7e9d82131fade3bf4ae49b8423955aff07b2446398d5b1633ecb13d221
+EBUILD rspec-mocks-2.99.1.ebuild 1395 SHA256 29ad051944c3afd4d83288c64bf9014c56cd9468916da0c3ed62d437a13b9296 SHA512 5b0a5f0427366bdb87a8bfef803232dd949b78b5bfc8c5df3723fced510aeb57e02a734cead6a930ddfe3022daef6fca41f09e1123b06e61ef3894a20f8af69b WHIRLPOOL b465596a2379b8d22b7c9903c8f74e04b7723b4bc79e34a3207af78acc1a1e8306b4d21e7b1b5c165c6c0122c24858d4c8130a3faacc31586bbde5e21cf87fa9
+EBUILD rspec-mocks-2.99.2.ebuild 1395 SHA256 129e2cfc9a654bd22f4aa6abfbbe4c9295e9bd8150fd8fd68d190222c8854017 SHA512 f721688ca460de39ab9282905d916dd59b17860b9eaff96a775ea3326547ddc8008961d49d8c0e44a39876ff6689a6591ce7c46f2003a5a2a7e5db68d3e03561 WHIRLPOOL 8dcfd568a6fac12d5cefd809082b5d40a7bd8b04402e23dcc6a1fd64968c8eb1b64dd2e1e2f96df417265b533f5e069cfaa8c8ce5a49be9cabd1a66e6097bada
+MISC ChangeLog 10406 SHA256 0e9fb8d73a6234c27c18e301e49e066c8cbd20c016f5a2134cb2455156f2cffd SHA512 98d29b4b537503711de243807f1e886223fef01ebd7d0dd66d4e3509dd9142da0126dd716ecc39613b8feefbda56246048b889293fe79ee6641d73c09b57ab5c WHIRLPOOL b988f1e29c6fe55f56716fec77df7dfa7c6bc8d6e53a8a77cca588980a0b8632c821259d3cf8fcd2e0c6f13641bba8c7323b6bf969e4b6a2a23675b8018794e3
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iKYEAREIAGYFAlPOiipfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
-RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOh2pACePk3PJmj/oSFukhGOe3f9jjPb
-BmsAnA/MK3wera+dYKMDxWbrOD6pA5vH
-=EW7B
+iF4EAREIAAYFAlPcgdgACgkQiIP6VqMIqNd1SgD9EDmJ3M7zuTRyBKDxDu8iTwHc
+8St5qvs60oatAzE3BL4A/3s9N27XLyOIBn7z+PewJE/FjRLoN27/izDRbGBU/qoN
+=dYpy
 -----END PGP SIGNATURE-----
